--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [Setting]
-facilitynum = 12
+facilitynum = 19
 state = 1
 uuid = 3fd87bfe-a814-11eb-8168-93faf1b3774a
-facilityname = ""
+facilityname = 산학융합관
 
